--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,14 @@ body, .hero-section, .hero-content, .hero-form-box {
     text-transform: capitalize;
     color: #fff;
 }
+.hero-subheading{
+    font-family: 'Lato', Arial, sans-serif;
+    font-weight: 900;
+    font-size: 24px;
+    letter-spacing: 0%;
+    text-transform: capitalize;
+    color: #FFFFFF;
+}
 .hero-content .btn-warning {
     background: #FFDD03;
     border: none;
